<resources>
    <string name="app_name">BabyDays</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Welcome to BabyDays. \n \nWe help you recording baby\'s every moment!</string>
    <string name="memories">Remember Every Day!</string>
    <string name="company">Copyright © ZZMOM</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="feedmilk">Time to feed milk!</string>
    <string name="curtime">Current Time: </string>
    <string name="feedamount">Feed Amount (OZ) : </string>
    <string name="oz">oz</string>
    <string name="dialog_feedmilk">It\'s time to feed milk!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="startsleep">Start Sleep</string>
    <string name="wakeup">Wakeup</string>
    <string name="wet">Wet</string>
    <string name="poopy">Poopy</string>
    <string name="smile">First Smile</string>
    <string name="rollover">First Roll Over</string>
    <string name="sit">First Time to Sit up</string>
    <string name="crawingback">First Time Crawing Back</string>
    <string name="crawingforward">First Time Crawing Forward</string>
    <string name="standsupport">First Time Stand Support</string>
    <string name="standself">First Time Stand by Self</string>
    <string name="walkholding">First Time Walking when holding</string>
    <string name="walkself">First Time Walk by self</string>
    <string name="speakfirstword">Speak First Word</string>
    <string name="note">Note:</string>
    <string name="babyactivity">Activities</string>
    <string name="title_activity_summary">Summary</string>
    <string name="datebutton_text">Pick Date</string>
    <string name="today">Today: </string>
    <string name="title_activity_day_activiies">DayActiviies</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_day_activities">DayActivities</string>
    <string name="listitemimg">List Item Images</string>
    <string name="title_activity_diary">Diary</string>
    <string name="writediary">Write your diary here</string>
    <string name="share">Share</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="shareimage">Share Image</string>
    <string name="addphoto">Add a photo to share with your friends</string>
    <string name="set_date">Set Date</string>
    <string name="pre_month">&lt;&lt;</string>
    <string name="pre_day">&lt;</string>
    <string name="next_day">></string>
    <string name="next_month">>></string>
    <string name="record_filter">Filter</string>
    <string-array name="diaper">
        <item>wet</item>
        <item>poopy</item>
    </string-array>
    <string-array name="mileStone">
        <item>First Smile</item>
        <item>First Roll Over</item>
        <item>First Time to Sit up</item>
        <item>First Time Crawing Back</item>
        <item>First Time Crawing Forward</item>
        <item>First Time Stand Support</item>
        <item>First Time Stand by Self</item>
        <item>First Time Walking when holding</item>
        <item>First Time Walk by self</item>
        <item>Speak First Word</item>
    </string-array>
    <string-array name="recordFilter">
        <item>All</item>
        <item>FeedMilk</item>
        <item>Nap</item>
        <item>Diaper</item>
    </string-array>
    <string-array name="nap">
        <item>Start</item>
        <item>End</item>
    </string-array>
    <string-array name="attrSp">
        <item>All</item>
        <item>FeedMilk</item>
        <item>Nap</item>
        <item>Diaper</item>
    </string-array>
    <string-array name="typeSp">
        <item>New Type</item>
        <item>FeedMilk</item>
        <item>Nap</item>
        <item>Diaper</item>
        <item>Milestone</item>
    </string-array>
    <string-array name="rangeBySp">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string-array name="manageSp">
        <item>Edit</item>
        <item>Insert</item>
        <item>Delete</item>
    </string-array>
    <string-array name="manageRecordDialogArray">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="reset">Reset</string>
    <string name="summary">Chart</string>
    <string name="chart_image">chart image</string>
    <string name="next">></string>
    <string name="prev">&lt;</string>
    <string name="x_axis">x axis</string>
    <string name="y_axis">y axis</string>
    <string name="first">&lt;&lt;</string>
    <string name="last">>></string>
    <string name="read_sample">Read Sample</string>
    <string name="pick_date">Pick Date</string>
    <string name="set_time">Set Time</string>
    <string name="manage_records">Manage Records</string>
    <string name="records_id_">"ID:"</string>
    <string name="search_id">search ID</string>
    <string name="type">Type: </string>
    <string name="info">Info: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="pick_time">Pick Time</string>
    <string name="title_activity_manage_records">ManageRecords</string>
    <string name="current">Current</string>
    <string name="newvalue">NewValue</string>
    <string name="memory_book">Memory</string>
    <string name="title_activity_memory_book">MemoryBook</string>
    <string name="profile">profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="date_pick_calendar">date pick calendar</string>
    <string name="baby_birth_date_">"Birth Date"</string>
    <string name="baby_birth_time_">"Birth Time"</string>
    <string name="baby_name_">"Baby Name"</string>
    <string name="birth_height_">"Birth Height"</string>
    <string name="birth_weight_lb_">"Birth Weight"</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="title_activity_memory_fragment1">MemoryFragment1</string>
    <string name="title_activity_memory_fragment2">MemoryFragment2</string>
    <string name="title_activity_list_fragment">ListFragment</string>
    <string name="title_activity_detail_fragment">DetailFragment</string>
    <string name="title_activity_detailport_fragment">DetailportFragment</string>
    <string name="title_activity_detail_port">DetailPort</string>
    <string name="title_activity_main_menu_card">MainMenuCard</string>
    <string name="title_activity_try_card_view">TryCardView</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="hour">h</string>
    <string name="min">min</string>
    <string name="title_activity_feed_dialog_fragment">FeedDialogFragment</string>
    <string name="height">Height: </string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="weight">"Weight: "</string>
    <string name="lb">lb</string>
    <string name="title_activity_charts">Charts</string>
</resources>