<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ViewStub 
        android:id="@+id/dateTimeStub"
        android:inflatedId="@+id/dateTimeInflated"
        android:layout="@layout/date_time_merge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sleep_duration"/>
        
        <EditText 
            android:id="@+id/hourEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="2"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/hour"/>
        
        <EditText 
            android:id="@+id/minuteEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="2"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/min"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal">
    
	    <Button
	        android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/cancel"/>
	    
	    <Button
	        android:id="@+id/ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/ok"/>
	    
    </LinearLayout>

</LinearLayout>
